Refactor to fully move web authorization to API
